<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProducts.Edit_Infomation"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/edit_detailstopic"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/itemname_info"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ID" />

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/weight_g_kg_info"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/price_info"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/description_info"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_price" />

        <EditText
            android:id="@+id/editText_ItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/item_name_info"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/weight_info"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_weight"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/price_info2"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/description_info2"
            android:inputType="text|textCapSentences|textMultiLine|textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView_availability"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/availability_info2"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/status_spinner"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_availability"
            app:layout_constraintTop_toBottomOf="@+id/editText_Description" />

        <TextView
            android:id="@+id/textView_ID"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/item_id2"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_id"
            android:layout_width="211dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/label2_id"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_ID"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/btn_update"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
</android.support.constraint.ConstraintLayout>