<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterProducts"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/register_products"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="344dp"
        android:layout_height="300dp"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/label_item_name"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/labelweight_g_kg"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/labelprice"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/labeldescription"
            android:textColor="@color/mycolor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_price" />

        <EditText
            android:id="@+id/editText_ItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/labelitem_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/labelweight"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_weight"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hintprice"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hintdescription"
            android:inputType="text|textCapSentences|textMultiLine|textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/hintsave"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
</android.support.constraint.ConstraintLayout>