<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_marginRight="5dip"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:src="@drawable/ic_kitchen_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_weight="90"
        android:fontFamily="@font/lato_bold"
        android:text="@string/item_descripiton"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtId"
        android:visibility="gone"
        android:text="@string/_1"
        android:layout_weight="50" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:fontFamily="@font/lato_bold"
        android:text="@string/item_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/mycolor"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>