<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_main"
            android:layout_width="301dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            app:srcCompat="@drawable/image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textview_welcome"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/lato_bold" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="344dp"
        android:layout_height="181dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_readme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <Button
            android:id="@+id/registerProductsBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/register_productsBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/displayProductsBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/display_productsBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/registerProductsBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/availabilityBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/availabilityBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/searchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerProductsBtn" />

        <Button
            android:id="@+id/editProductsBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/edit_productsBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/availabilityBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/searchBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/recipiesBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/recipiesBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchBtn"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button_readme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="READ ME"
        android:textColor="@color/links"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</android.support.constraint.ConstraintLayout>